syntax = "proto3";

option go_package = "./raft";

service Raft {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}

    rpc GetPeerList(GetPeerListRequest) returns (GetPeerListResponse) {}
}

message RequestVoteRequest {
    uint64 term = 1;
    uint64 candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesRequest {
    uint64 term = 1;
    uint64 leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated Entry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message Entry {
    uint64 term = 1;
    bytes data = 2;
}

message GetPeerListRequest {
}

message GetPeerListResponse {
    repeated int32 peerIds = 1;
    repeated string peerAddrs = 2;
}